Add dimension event chance
Replace dimension fallback with dimension event chance. You can still have the fallback option or disabled (= never). But you gain the possibility to play dimension events half of the time or proportionally to the number of music, just like for misc events.